--- a/style.css
+++ b/style.css
@@ -58,12 +58,12 @@ p {
   margin: 5px;
   transition: 0.3s ease;
   transition-property: background-color, color;
-  img {
-    width: 20px;
-    margin-right: 5px;
-    align-items: center;
-    justify-content: center;
-  }
+  /* img { */
+    /* width: 20px; */
+    /* margin-right: 5px; */
+    /* align-items: center; */
+    /* justify-content: center; */
+  /* } */
 }
 .cta:hover {
   color: white;
@@ -438,6 +438,61 @@ p {
   transform: scale(1.1);
 }
 /* End Projects section */
+
+/* galeri section */
+/* buatlah agar setiap foto pada galery section, akan terlihat sama seperti pada about section */
+#galery-amel .about {
+  flex-direction: column-reverse;
+  text-align: center;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 100px 20px;
+}
+#galery-amel .col-left {
+  width: 250px;
+  height: 360px;
+}
+#galery-amel.col-right {
+  width: 100%;
+  padding-left: 100px;
+}
+#galery-amel .col-right h2 {
+  font-size: 1.8rem;
+  font-weight: 500;
+  letter-spacing: 0.2rem;
+  margin-bottom: 10px;
+}
+#galery-amel .col-right p {
+  margin-bottom: 20px;
+}
+#galery-amel .col-right .cta {
+  color: black;
+  margin-bottom: 50px;
+  padding: 10px 20px;
+  font-size: 2rem;
+  width: 10;
+  margin-left: 100px;
+}
+#galery-amel .col-left .about-img {
+  height: 100%;
+  width: 100%;
+  position: relative;
+  border: 10px solid white;
+}
+#galery-amel .col-left .about-img::after {
+  content: "";
+  position: absolute;
+  left: -33px;
+  top: 19px;
+  height: 98%;
+  width: 98%;
+  border: 7px solid cyan;
+  z-index: -1;
+}
+
+
+
+/* end */
 
 /* About Section */
 #about .about {
