--- a/style.css
+++ b/style.css
@@ -58,12 +58,12 @@ p {
   margin: 5px;
   transition: 0.3s ease;
   transition-property: background-color, color;
-  /* img { */
-    /* width: 20px; */
-    /* margin-right: 5px; */
-    /* align-items: center; */
-    /* justify-content: center; */
-  /* } */
+  img { 
+    width: 20px;
+    margin-right: 5px;
+    align-items: center;
+    justify-content: center;
+   }
 }
 .cta:hover {
   color: white;
