--- a/style.css
+++ b/style.css
@@ -443,16 +443,18 @@ p {
 /* buatlah agar setiap foto pada galery section, akan terlihat sama seperti pada about section */
 #galeri-amel .col-right a{
   /* buat tombol cta menjadi ditengah */
-  /* position: absolute; */
-  /* top: 50%; */
-  /* left: 50%; */
-  /* transform: translate(-50%, -50%); */
-  /* align-items: center; */
-  /* justify-content: center; */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  align-items: center;
+  justify-content: center;
   /* margin-right: 100px; */
   display: inline;
+  /* width: 10%; */
+  /* kecilkan tombol cta */
+  font-size: 1.2rem;
 }
-
 
 #galery-amel .about {
   flex-direction: column-reverse;
