--- a/style.css
+++ b/style.css
@@ -351,6 +351,85 @@ p {
 }
 /* End Services Section */
 
+/* Services Section */
+#project-testing .services {
+  flex-direction: column;
+  text-align: center;
+  max-width: 1500px;
+  margin: 0 auto;
+  padding: 100px 0;
+}
+#project-testing .service-top {
+  max-width: 500px;
+  margin: 0 auto;
+}
+#project-testing .service-bottom {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 50px;
+}
+#project-testing .service-item {
+  flex-basis: 80%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+  padding: 30px;
+  border-radius: 10px;
+  background-image: url(./img/FireShot\ Capture\ 041\ -\ \ -\ .png);
+  background-size: cover;
+  margin: 10px 5%;
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+}
+#project-testing .service-item::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
+  opacity: 0.9;
+  z-index: -1;
+}
+#project-testing .service-bottom .icon {
+  height: 80px;
+  width: 80px;
+  margin-bottom: 20px;
+}
+  font-size: 1rem;
+#project-testing .service-item h3 {
+  /* color: white; */
+  margin-bottom: 10px;
+  text-transform: uppercase;
+}
+#project-testing .service-item p {
+  color: white;
+  text-align: left;
+}
+
+#project-testing .servis-item h3 {
+  color: cyan;
+}
+
+.service-item h3 {
+  text-decoration: underline; /* Tambahkan garis bawah */
+  font-style: italic; /* Membuat teks miring */
+  /* Warisi warna dari elemen induk atau elemen global */
+}
+
+.service-item h3:hover {
+  color: white;
+  font-style: normal;
+  text-decoration: none; /* Hapus garis bawah saat dihover */
+  /* font-weight: bold; Buat teks menjadi bold saat dihover */
+}
+/* End Services Section */
+
 /* Projects section */
 
 .project-item h1 {
@@ -806,6 +885,11 @@ p {
   /* End header */
 
   #services .service-bottom .service-item {
+    flex-basis: 22%;
+    margin: 1.5%;
+  }
+  
+  #project-testing .service-bottom .service-item {
     flex-basis: 22%;
     margin: 1.5%;
   }
